--- a/main.html
+++ b/main.html
@@ -6,8 +6,14 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
-	<script src="js/app.js"></script>
 </head>
 <body>
+	<div class="container">
+		<img src="images/ryu-standing-still.png" class="ryu-still" alt="Ryu Standing Still"/>
+		<img src="images/ryu-ready-position.gif" class="ryu-ready" alt="Ryu Ready"/>
+		<img src="images/ryu-throwing-hadouken.png" class="ryu-throw" alt="Ryu Throwing Hadouken">
+		<img src="images/hadouken.gif" alt="hadouken" class="hadouken">
+	</div>
+	<script src="js/app.js"></script>
 </body>
 </html>
