--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 	<div class="container">
-		<img src="images/ryu-standing-still.png" class="ryu-still" alt="Ryu Standing Still"/>
-		<img src="images/ryu-ready-position.gif" class="ryu-ready" alt="Ryu Ready"/>
-		<img src="images/ryu-throwing-hadouken.png" class="ryu-throw" alt="Ryu Throwing Hadouken">
-		<img src="images/hadouken.gif" alt="hadouken" class="hadouken">
+		<div class="ryu">
+			<div class="ryu-still"></div>
+			<div class="ryu-ready"></div>
+			<div class="ryu-throwing"></div>
+		</div>
+		<div class="hadouken"></div>
 	</div>
 	<script src="js/app.js"></script>
 </body>
