--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 		</div>
 		<div class="hadouken"></div>
 	</div>
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 	<script src="js/app.js"></script>
 </body>
 </html>
