Adding closing audio tags.

--- a/main.html
+++ b/main.html
@@ -30,9 +30,9 @@
 		<div class="hadouken"></div>
 	</div>
 	<p class="trademark">The Streetfighter logo, Ryu and his Hadoukens are all trademarks of <a href="http://www.capcom.com">Capcom</a></p>
-	<audio id="bg-sound" src="sound/nice.mp3"/>
-	<audio id="hadouken-sound" src="sound/hadouken.mp3"/>
-	<audio id="cool-sound" src="sound/cool.mp3"/>
+	<audio id="bg-sound" src="sound/nice.mp3"/></audio>
+	<audio id="hadouken-sound" src="sound/hadouken.mp3"/></audio>
+	<audio id="cool-sound" src="sound/cool.mp3"/></audio>
 	<script src="js/app.js"></script>
 </body>
 </html>
